fix ampli scrollbar style

--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -223,7 +223,7 @@
 
       .ampli-scrollbar-container {
         .scrollbar-directive{
-          margin-top: 8px;
+          margin-top: -1px;
         }
       }
 
